--- a/02-lab-transforming-data/02-lab-transforming-data-with-dplyr.Rmd
+++ b/02-lab-transforming-data/02-lab-transforming-data-with-dplyr.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Transforming data with dplyr"
 author: "Angela Dixon"
-date: "2015-02-04 ![Creative Commons License](images/cc-by.png)"
+date: "2015-02-04 <img src="images/cc-by.png">
 output: ioslides_presentation
 ---
 
