--- a/04-visualization/04-visualization.Rmd
+++ b/04-visualization/04-visualization.Rmd
@@ -2,7 +2,9 @@
 title: "04-Visualization"
 author: "Matthew Salganik"
 date: "2015-02-09 ![Creative Commons License](images/cc-by.png)"
-output: ioslides_presentation
+output: 
+  ioslides_presentation:
+    css: soc504_s2015_slides.css
 ---
 
 ##
@@ -34,36 +36,40 @@ I think that visualizations are **more powerful** than models for both of these 
 
 <img src="images/anscombe_quartet.svg" width="600">
 
+<div class="cite">
 http://commons.wikimedia.org/wiki/File:Anscombe%27s_quartet_3.svg
+</div>
 
-##  { .flexbox .vcenter }
+##  
 
 <img src="images/challenger_crew.jpg" width="500">
 
+<div class="cite">
 http://commons.wikimedia.org/wiki/File:Challenger_flight_51-l_crew.jpg
+</div>
 
 Example from [Tufte (1997)](http://www.edwardtufte.com/tufte/books_visex)
 
 ##  { .flexbox .vcenter }
 
-<img src="images/challenger_title.pdf" width="600">
+<img src="images/challenger_title.png" width="600">
 
 ##  { .flexbox .vcenter }
 
-<img src="images/challenger_data.pdf" width="600">
+<img src="images/challenger_data.png" width="600">
 
 ##  { .flexbox .vcenter }
 
-<img src="images/challenger_conclusion.pdf" width="600">
+<img src="images/challenger_conclusion.png" width="600">
 
 ##  { .flexbox .vcenter }
 
-<img src="images/challenger_recommendation.pdf" width="600">
+<img src="images/challenger_recommendation.png" width="600">
 
 
 ## { .flexbox .vcenter }
 
-<img src="images/challenger_tufte.pdf" width="800">
+<img src="images/challenger_tufte.png" width="800">
 
 ## 
 
@@ -98,9 +104,9 @@ By Jackman
 
 ## { .build .smaller}
 
-<img src="images/kastellec_using_2007_tab8.png" width="300">
+<img src="images/kastellec_using_2007_tab8.pdf" width="300">
 
-<img src="images/kastellec_using_2007_fig7.png" width="300">
+<img src="images/kastellec_using_2007_fig7.pdf" width="300">
 
 From: Kasetellec and Leoni (2007) [Using Graphs Instead of Tables in Political Science](http://dx.doi.org/10.1017/S1537592707072209)
 
@@ -121,7 +127,7 @@ From: Kasetellec and Leoni (2007) [Using Graphs Instead of Tables in Political S
 
 ## note on coding error
 
-<img src="images/healy_data_2014_fig5.pdf" width="450">
+<img src="images/healy_data_2014_fig5.png" width="450">
 
 Thank you to Kieran Healy for being open about this so that we can all learn from it
 
